<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mailfetch.matoosh.me.mailfetch.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15px"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="3dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_connect_label"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:id="@+id/address_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/server_address"
            android:inputType="textUri" />

        <EditText
            android:id="@+id/port_field"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/server_port"
            android:inputType="number" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30px" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_username"
            android:inputType="textWebEmailAddress" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_password"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30px" />

        <Switch
            android:id="@+id/secure_switch"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:text="@string/email_secure" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_type"
            android:textColor="@android:color/background_dark"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/imap_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="onEmailTypeChosen"
                android:text="@string/email_imap" />

            <RadioButton
                android:id="@+id/pop3_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onEmailTypeChosen"
                android:text="@string/email_pop3" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30px"
            android:layout_weight="1" />

        <Button
            android:id="@+id/connect_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onConnectClicked"
            android:text="@string/btn_connect" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
